Fix line wrapping for long translated strings

--- a/denise/static/css/denise.css
+++ b/denise/static/css/denise.css
@@ -8,7 +8,6 @@
 
 .line {
   font-family: monospace;
-  white-space: pre;
 }
 
 .warning .msg {
